# cmake_aix_bug

./: CMakeLists.txt  stream_test.cpp
